# telegram-news-poster

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: manual.yml  schedule.yml
data/: blocklist.yml  sent_history.jsonl
src/app/: __init__.py  bot_approval.py  config.py  gmail.py  main.py  sources.yaml  summarize.py  url_cleaner.py  utils.py
src/app/rules/: innovation_xr.yml
